--- a/StoneAttack/index.html
+++ b/StoneAttack/index.html
@@ -23,7 +23,11 @@
 <!-- <div style="text-align: center;"> -->
     <canvas id="gameCanvas" width="900" height="600"></canvas>
 <!--</div>-->
-</body>
-</html>
+
 <script src="soundManager2/js/soundmanager2.js"></script>
 <script src="cocos2d.js"></script>
+<script>
+    window.SoundControl.Load();
+</script>
+</body>
+</html>
