--- a/StoneAttack/index.html
+++ b/StoneAttack/index.html
@@ -25,6 +25,7 @@
 <!--</div>-->
 
 <script src="soundmanager2/script/soundmanager2.js"></script>
+<script src="src/SoundControl.js"></script>
 <script src="cocos2d.js"></script>
 <script>
     window.SoundControl.Load();
