soundManager 2 Pre-Configuration

--- a/StoneAttack/index.html
+++ b/StoneAttack/index.html
@@ -26,5 +26,13 @@
 
 <script src="soundmanager2/script/soundmanager2.js"></script>
 <script src="cocos2d.js"></script>
+<script>
+    soundManager.setup({
+        url: './soundmanager2/swf/',
+        preferFlash: false,
+        debugMode: false,
+        useHighPerformance: true
+    });
+</script>
 </body>
 </html>
