파비콘 추가, index 페이지 약간 수정

--- a/StoneAttack/index.html
+++ b/StoneAttack/index.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<title>Stone Attack</title>
-	<link rel="icon" type="image/GIF" href="res/favicon.ico"/>
-	<meta name="viewport" content="width=900,user-scalable=no"/>
-	<meta name="screen-orientation" content="portrait"/>
-	<meta name="apple-mobile-web-app-capable" content="yes"/>
-	<meta name="full-screen" content="yes"/>
-	<meta name="x5-fullscreen" content="true"/>
+	<link rel="shortcut icon" href="favicon.ico">
+	<meta name="viewport" content="width=900,user-scalable=no">
+	<meta name="screen-orientation" content="landscape">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="full-screen" content="yes">
+	<meta name="x5-fullscreen" content="true">
 	<style>
 		html, body {
 			margin: 0;
